Closed Bug 1652329 Opened 5 years ago Closed 5 years ago

Permafailing toolkit/components/antitracking/test/browser/<anything>.js | Message should be of expected category - Got cookieBlockedForeign, expected cookieBlockedTracker when Gecko 80 merges to Beta on 2020-07-27

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

VERIFIED FIXED
mozilla80
Tracking Status
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 + verified

People

(Reporter: nataliaCs, Assigned: xeonchen)

References

Details

Attachments

(2 files)

[Tracking Requested - why for this release]:

Push: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&revision=318af317fc278ca0819c0030ec2e2100247588ef&searchStr=bc1&selectedTaskRun=TAKNs4HMSDCe3aqQgpYkbw.0

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=309498204&repo=try&lineNumber=4168

[task 2020-07-12T12:28:37.263Z] 12:28:37 INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_blockingIndexedDb.js | We want a security error message. - true == true -
[task 2020-07-12T12:28:37.263Z] 12:28:37 INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_blockingIndexedDb.js | Some console message should be generated -
[task 2020-07-12T12:28:37.263Z] 12:28:37 INFO - Buffered messages finished
[task 2020-07-12T12:28:37.264Z] 12:28:37 INFO - TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_blockingIndexedDb.js | Message should be of expected category - Got cookieBlockedForeign, expected cookieBlockedTracker
[task 2020-07-12T12:28:37.264Z] 12:28:37 INFO - Stack trace:
[task 2020-07-12T12:28:37.264Z] 12:28:37 INFO - chrome://mochikit/content/browser-test.js:test_is:1327
[task 2020-07-12T12:28:37.265Z] 12:28:37 INFO - chrome://mochitests/content/browser/toolkit/components/antitracking/test/browser/antitracking_head.js:_createTask/<:809
[task 2020-07-12T12:28:37.265Z] 12:28:37 INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_blockingIndexedDb.js | Message should be of expected category -

Andrea, could this be caused by Bug 1650950 ?

Flags: needinfo?(amarchesini)

Gary do you have time to check this? I doubt it's related to the renaming. Bug 1650950 should not have introduced any logical changes.
More likely it's about DFPI.

Flags: needinfo?(amarchesini) → needinfo?(xeonchen)

(In reply to Andrea Marchesini [:baku] from comment #1)

Gary do you have time to check this? I doubt it's related to the renaming. Bug 1650950 should not have introduced any logical changes.
More likely it's about DFPI.

Okay, I'll try if I can check it this week along with bug 1652243.

Natalia, would you mind to share the steps to reproduce this? I'm not sure how "when Gecko 80 merges to Beta" works? Thank you!

Flags: needinfo?(xeonchen) → needinfo?(ncsoregi)

It's documented here. Basically what's needed is:

./mach try release -v 80.0b1 --tasks release-sim --migration central-to-beta --no-push
hg commit -m "Early Beta config"
./mach try chooser --full

And request the browser-chrome tests for Linux 18.04 x64 DevEdition.

Flags: needinfo?(ncsoregi)

(In reply to Sebastian Hengst [:aryx] (needinfo on intermittent or backout) from comment #4)

It's documented here. Basically what's needed is:

./mach try release -v 80.0b1 --tasks release-sim --migration central-to-beta --no-push
hg commit -m "Early Beta config"
./mach try chooser --full

And request the browser-chrome tests for Linux 18.04 x64 DevEdition.

Thanks!

Assignee: nobody → xeonchen

(In reply to Andrea Marchesini [:baku] from comment #1)

Gary do you have time to check this? I doubt it's related to the renaming. Bug 1650950 should not have introduced any logical changes.
More likely it's about DFPI.

Reverting the changes in bug 1650950 doesn't fix the issue:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=e366389314e3d33b663032cdeed058d09d958ce1

The message "Message should be of expected category - Got cookieBlockedForeign, expected cookieBlockedTracker" comes from [1].
The message also shows it was running with cookieBehavior set to 4.

I printed out the messages when the error occurs [2], and looks like about:privatebrowsing is blocked by STATE_COOKIES_BLOCKED_FOREIGN?

Baku, any thoughts?

[1] https://searchfox.org/mozilla-central/rev/82c04b9cad5b98bdf682bd477f2b1e3071b004ad/toolkit/components/antitracking/test/browser/antitracking_head.js#808-813
[2] https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=309756894&repo=try&lineNumber=4275

Flags: needinfo?(amarchesini)

Sorry, I don't see anything wrong without testing it, but It seems a pref misconfiguration.
I would suggest you running the beta simulation locally to reproduce the issue.

Flags: needinfo?(amarchesini)

(In reply to Andrea Marchesini [:baku] from comment #9)

Sorry, I don't see anything wrong without testing it, but It seems a pref misconfiguration.
I would suggest you running the beta simulation locally to reproduce the issue.

Indeed, but the problem is that I can't reproduce it locally.

See Also: → 1628732
Keywords: leave-open
Pushed by xeonchen@gmail.com: https://hg.mozilla.org/integration/autoland/rev/5919eb01cc52 don't notify UI when scheme is "about"; r=baku
See Also: → 1648195
Pushed by xeonchen@gmail.com: https://hg.mozilla.org/integration/autoland/rev/ee2be795cf51 don't report blocking to console when scheme is "about"; r=dimi
Keywords: leave-open
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: