Bug 1652329 - don't notify UI when scheme is "about"; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D83938