toolkit/components/antitracking/StorageAccess.cpp
@@ -315,9 +315,11 @@ bool StorageDisabledByAntiTracking(nsPIDOMWindowInner* aWindow,
   bool disabled = StorageDisabledByAntiTrackingInternal(
       aWindow, aChannel, aPrincipal, aURI, cookieJarSettings, aRejectedReason);
 
-  // Don't notify UI when the scheme is chrome, this is a workaround to avoid
-  // creating unnecessaty content blocking events, see Bug 1628732.
-  if (aWindow && aURI && aURI->SchemeIs("chrome")) {
+  // Don't notify UI when the scheme is chrome or about, this is a workaround to
+  // avoid creating unnecessaty content blocking events,
+  // see bug 1628732 and bug 1652329
+  if (aWindow && aURI &&
+      (aURI->SchemeIs("chrome") || aURI->SchemeIs("about"))) {
     return disabled;
   }
 
